tests/pos/inline-trait-signature-parameters-using-nameless.scala
inline trait A(using Int) // error

given x: Int = 1
class B extends A